Bug 405810. Expose line-number object attribute for caret in focused area. r=ginn, sr=roc, a=schrep